# setup-finder

./: .gitignore  LICENSE  LICENSES.md  README.md  cache.py  find.py  fumen.py  gen.py  input.txt  output.py  pyproject.toml  requirements.txt  setup.py  sfinder.py  tet.py
fumen/: english.js  frame.js  fumen.html  pwn.js  setup-finder.js
setupfinder/: analysis.py  find.py  fumen.py  img.py  output.py  sfinder.py  tet.py
setupfinder/finder/: cache.py  finder.py  fumen.py  gen.py  sfinder.py  tet.py
src/setupfinder/: cache.py  find.py  gen.py  img.py  sfinder.py  tet.py
tests/: test_analysis.py  test_find.py  test_img.py
